# XLMate

.github/workflows/: backend.yml
backend/: Cargo.toml
backend/modules/api/: Cargo.toml
backend/modules/api/src/: games.rs  openapi.rs  server.rs
backend/modules/chess/: Cargo.toml
backend/modules/chess/src/: lib.rs  rating.rs
backend/modules/chess/tests/: rating_integration_test.rs
backend/modules/dto/src/: games.rs
backend/modules/service/src/: games.rs
backend/modules/st_core/: Cargo.toml  README.md
backend/modules/st_core/src/: endpoint.rs  lib.rs  main.rs  models.rs  nft.rs  transaction_builder.rs
backend/modules/st_core/tests/: integration_test.rs
contracts/game_contract/src/: lib.rs  test.rs
contracts/game_contract/test_snapshots/tests/: test_claim_puzzle_reward_invalid_sig.1.json  (+2 more)
frontend/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/__tests__/: eloStatsUtils.test.ts  spectatorUtils.test.ts  useEloStats.test.ts  useSpectatorSocket.test.ts
frontend/app/dashboard/: page.tsx
frontend/app/watch/: page.tsx
frontend/components/: GameSidebar.tsx  icons.tsx
frontend/components/dashboard/: EloChart.tsx  PerformanceBreakdown.tsx  RankBadge.tsx  RecentMatches.tsx  StatCard.tsx
frontend/components/profile/: EloRatingChart.tsx
frontend/components/watch/: LiveGameCard.tsx  PlayerPanel.tsx  SpectatorBoard.tsx  SpectatorMoveList.tsx
frontend/constants/: mockEloData.ts  mockLiveGames.ts
frontend/hook/: useEloStats.ts  useSpectatorSocket.ts
frontend/lib/: eloStatsUtils.ts  spectatorUtils.ts
(+3 files in other folders)
