[package]
name = "st_core"
version = "0.1.0"
edition = "2021"

[dependencies]
stellar-base = "0.7.0"
stellar_sdk = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }

[features]
default = []
api = ["actix-web", "utoipa"]

[dependencies.actix-web]
version = "4"
optional = true

[dependencies.utoipa]
version = "4.2.0"
optional = true
